@@ -1,3 +1,7 @@
+2015-02-16  Torvald Riegel  <triegel@redhat.com>
+
+	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h: Remove file.
+
 2015-02-16  Mike Frysinger  <vapier@gentoo.org>
 
 	* sysdeps/unix/sysv/linux/ia64/getpagesize.c: Delete.
